--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 agp = "8.5.1"
-kotlin = "1.9.0"
+kotlin = "1.9.24"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -12,9 +12,10 @@ activityCompose = "1.9.1"
 composeBom = "2024.06.00"
 realm = "1.16.0"
 draggerHilt ="2.49"
-ksp="2.0.0-1.0.23"
+ksp="1.9.10-1.0.13"
 navigationCompose="2.7.7"
 datastorePreferences ="1.1.1"
+hiltNavigationCompose="1.2.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -35,9 +36,11 @@ kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-c
 realm-kotlin-sync = { module = "io.realm.kotlin:library-sync", version.ref = "realm" }
 realm-kotlin-base = { module = "io.realm.kotlin:library-base", version.ref = "realm" }
 hilt-android ={group="com.google.dagger" , name="hilt-android" , version.ref="draggerHilt"}
-#hilt-android-complier ={group="com.google.dagger" , name="hilt-android-compiler" , version.ref="draggerHilt"}
+hilt-android-complier ={group="com.google.dagger" , name="hilt-android-compiler" , version.ref="draggerHilt"}
 navigation-compose ={group ="androidx.navigation" , name ="navigation-compose", version.ref="navigationCompose"}
 datastore-preferences ={group ="androidx.datastore", name="datastore-preferences" , version.ref="datastorePreferences"}
+hilt-navigation-compose ={group="androidx.hilt",name ="hilt-navigation-compose",version.ref ="hiltNavigationCompose"}
+
 
 
 [plugins]
