--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ ksp="1.9.10-1.0.13"
 navigationCompose="2.7.7"
 datastorePreferences ="1.1.1"
 hiltNavigationCompose="1.2.0"
+uiTextGoogleFonts = "1.7.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -40,6 +41,7 @@ hilt-android-complier ={group="com.google.dagger" , name="hilt-android-compiler"
 navigation-compose ={group ="androidx.navigation" , name ="navigation-compose", version.ref="navigationCompose"}
 datastore-preferences ={group ="androidx.datastore", name="datastore-preferences" , version.ref="datastorePreferences"}
 hilt-navigation-compose ={group="androidx.hilt",name ="hilt-navigation-compose",version.ref ="hiltNavigationCompose"}
+androidx-ui-text-google-fonts = { group = "androidx.compose.ui", name = "ui-text-google-fonts", version.ref = "uiTextGoogleFonts" }
 
 
 
